--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <h1>Etch-a-Sketch</h1>
+    <div class="container">
+
+    </div>
     <script src="./scripts/script.js"></script>
 </body>
 
