--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-    <h1>Etch-a-Sketch</h1>
-    <div class="container">
+    <div class="content">
+        <h1>Etch-a-Sketch</h1>
+        <div class="container">
 
+        </div>
     </div>
+
     <script src="./scripts/script.js"></script>
 </body>
 
