build: added resolution button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
     <div class="content">
-        <h1>Etch-a-Sketch</h1>
+        <div class="header">
+            <h1>Etch-a-Sketch</h1>
+            <button>Change Resolution</button>
+        </div>
+
         <div class="container">
 
         </div>
