feat: added resolution button functionality.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
         <div class="header">
             <h1>Etch-a-Sketch</h1>
-            <button>Change Resolution</button>
+            <button class="resolution-button">Change Resolution</button>
         </div>
 
         <div class="container">
