feat: Choose between two color options

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="container">
 
         </div>
+        <div class="options">
+            <button id="option-normal" class="current-option">Normal</button>
+            <button id="option-random-rgb">Random Color</button>
+            <button id="option-fade">Fade</button>
+        </div>
     </div>
 
     <script src="./scripts/script.js"></script>
